--- a/example/ohos/entry/oh-package.json5
+++ b/example/ohos/entry/oh-package.json5
@@ -1,11 +1,11 @@
 {
-  name: 'entry',
-  version: '1.0.0',
-  description: 'Please describe the basic information.',
-  main: '',
-  author: '',
-  license: '',
-  dependencies: {
-    '@ohos/connectivity_plus_ohos': 'file:./har/connectivity_plus_ohos.har',
-  },
+  "name": "entry",
+  "version": "1.0.0",
+  "description": "Please describe the basic information.",
+  "main": "",
+  "author": "",
+  "license": "",
+  "dependencies": {
+    "connectivity_plus_ohos": "file:../har/connectivity_plus_ohos.har"
+  }
 }
