--- a/example/ohos/hvigor/hvigor-config.json5
+++ b/example/ohos/hvigor/hvigor-config.json5
@@ -13,9 +13,8 @@
 * limitations under the License.
 */
 
-{ 
-  "hvigorVersion": "4.1.2",
+{
+  "modelVersion": "5.0.0",
   "dependencies": {
-    "@ohos/hvigor-ohos-plugin": "4.1.2"
   }
 }
