--- a/example/ohos/oh-package.json5
+++ b/example/ohos/oh-package.json5
@@ -1,4 +1,5 @@
 {
+  "modelVersion": "5.0.0",
   "name": "connectivity_plus_ohos_example",
   "version": "1.0.0",
   "description": "Please describe the basic information.",
@@ -12,6 +13,8 @@
     "@ohos/hypium": "1.0.6"
   },
   "overrides": {
-    "@ohos/flutter_ohos": "file:./har/flutter.har"
+    "@ohos/flutter_ohos": "file:./har/flutter.har",
+    "connectivity_plus_ohos": "file:./har/connectivity_plus_ohos.har",
+    "@ohos/flutter_module": "file:./entry"
   }
 }
